Add data freshness date to header
Shows "Data: Jan 31, 2026" in the stats bar so users know
the data does not include the Feb 2, 2026 document release.

--- a/index.html
+++ b/index.html
@@ -819,6 +819,7 @@
                 <div class="stat-item">Docs: <span id="statDocs">-</span></div>
                 <div class="stat-item">Chunks: <span id="statChunks">-</span></div>
                 <div class="stat-item stat-clickable" id="clusterStat" title="Click to browse clusters">Clusters: <span id="statClusters">-</span></div>
+                <div class="stat-item" style="color:var(--text-muted);font-size:0.75rem" title="Data source last updated">Data: Jan 31, 2026</div>
             </div>
         </div>
     </header>
