Fix: show cluster count (256) in header stats
Set statClusters from pre-loaded data on init.

--- a/index.html
+++ b/index.html
@@ -2354,6 +2354,7 @@
             if (clusterToggle) clusterToggle.addEventListener('click', toggleClusterBrowser);
 
             // Show cluster visualization immediately (uses pre-loaded data)
+            document.getElementById('statClusters').textContent = state.clusters.length.toLocaleString();
             showClusterOverview();
         }
 
